--- a/memorial-avicii/index.html
+++ b/memorial-avicii/index.html
@@ -12,9 +12,9 @@
     <header>
         <nav>
             <div> 
-                <a href=""><img src="imglinks/spotify.png" alt=""></a>
-                <a class="youtube-link" href=""><img src="imglinks/youtube.png" alt=""></a>
-                <a href=""><img src="imglinks/apple.png" alt=""></a>                    
+                <a target="_blank" href="https://open.spotify.com/artist/1vCWHaC5f2uS3yhpwWbIA6"><img src="imglinks/spotify.png" alt=""></a>
+                <a target="_blank" class="youtube-link" href="https://www.youtube.com/channel/UCPHjpfnnGklkRBBTd0k6aHg"><img src="imglinks/youtube.png" alt=""></a>
+                <a target="_blank" href="https://music.apple.com/br/artist/avicii/298496035"><img src="imglinks/apple.png" alt=""></a>
             </div>
             <img  src="imglogo/logo.png" alt="">     
         </nav>
