--- a/memorial-avicii/index.html
+++ b/memorial-avicii/index.html
@@ -9,6 +9,9 @@
     <title>Avicii</title>
 </head>
 <body>
+
+  <!--Cabeçalho-->
+
     <header>
         <nav>
             <div> 
@@ -19,7 +22,10 @@
             <img  src="imglogo/logo.png" alt="">     
         </nav>
     </header>
-    <main>
+
+    <!--Parte Inicial-->
+
+<main>
     <section>
         <div class="itens-1">
             <div class="texto-1">
@@ -38,11 +44,15 @@
         </div>
     </section>
 
+    <!--Share-->
+
     <section class="section-share">
         <button type="submit">
             SHARE YOUR MEMORIES OF AVICII
         </button>
     </section>
+
+    <!--Comments-Imagens-->
 
     <section>
         <div class="comments-imagens">
@@ -53,6 +63,8 @@
              <p class="consideracoes">TAKE A FEW MINUTES AND READ THE AVICII STORIES AND MEMORIES PEOPLE HAVE SHARED FROM ALL OVER THE WORLD.</p>
         </div>
     </section>
+
+    <!--Instagram-->
 
     <h2 class="titulo-instagram" id="instagram">Instagram</h2>
     <section>
@@ -67,6 +79,9 @@
 
     </section>
 </main>
+
+    <!--Footer-->
+
     <footer>
         <p>Site Feito por Leonardo Tavares, baseado no site '<a target="_blank" href="https://avicii.com/">Avicii.com</a>'</p>
     </footer>
